<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow>

            <TextView
                android:id="@+id/rec_f1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:text="@string/field1"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rec_f2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/field2"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rec_f3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field3"
                android:textColor="#000"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="Modify"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Delete"
            android:visibility="visible" />
    </RelativeLayout>


</LinearLayout>